[gd_scene load_steps=9 format=3 uid="uid://stdy8gmpcsag"]

[ext_resource type="Script" uid="uid://bp81sfswrglu1" path="res://main_scene.gd" id="1_0f027"]
[ext_resource type="Texture2D" uid="uid://tm6eefjumvlb" path="res://sprites/Background_MainMenu.png" id="2_2c62f"]
[ext_resource type="Texture2D" uid="uid://dkywgptmmvbow" path="res://sprites/Button_Play.png" id="3_gyfs4"]
[ext_resource type="PackedScene" uid="uid://bwkhsvmjyt832" path="res://characters/player/immovable_player.tscn" id="4_8mm7a"]
[ext_resource type="Texture2D" uid="uid://dwlx11om7kgwg" path="res://sprites/Cage.png" id="5_8mm7a"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d5x1h"]
texture = ExtResource("3_gyfs4")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8mm7a"]
texture = ExtResource("3_gyfs4")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gyfs4"]
texture = ExtResource("3_gyfs4")

[node name="MainScene" type="Node2D"]
script = ExtResource("1_0f027")
button_teleport_area = Rect2(45, 495, 1540, 450)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 544)

[node name="Test" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Test"]
layout_mode = 0
offset_left = 24.0
offset_top = 21.0
offset_right = 1893.0
offset_bottom = 649.0

[node name="Label" type="Label" parent="Test/ColorRect"]
layout_mode = 0
offset_left = 75.0
offset_top = 94.0
offset_right = 1480.0
offset_bottom = 303.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "Welcome to projekt semestralny 2025L
team alpha"

[node name="Score" type="Label" parent="Test/ColorRect"]
layout_mode = 0
offset_left = 1515.0
offset_top = 298.0
offset_right = 1817.0
offset_bottom = 401.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "Score : 0"

[node name="ClickMeButton" type="Button" parent="Test"]
layout_mode = 0
offset_left = 1586.0
offset_top = 943.0
offset_right = 1895.0
offset_bottom = 1054.0
theme_override_font_sizes/font_size = 75
text = "Click Me"

[node name="start_jelly" type="Button" parent="Test"]
layout_mode = 0
offset_left = 77.0
offset_top = 335.0
offset_right = 386.0
offset_bottom = 446.0
theme_override_font_sizes/font_size = 75
text = "jellyboy"

[node name="start_szejtan" type="Button" parent="Test"]
layout_mode = 0
offset_left = 78.0
offset_top = 481.0
offset_right = 387.0
offset_bottom = 592.0
theme_override_font_sizes/font_size = 75
text = "szejtan"

[node name="start_noome" type="Button" parent="Test"]
layout_mode = 0
offset_left = 428.0
offset_top = 335.0
offset_right = 737.0
offset_bottom = 446.0
theme_override_font_sizes/font_size = 75
text = "noome"

[node name="start_zephyr" type="Button" parent="Test"]
layout_mode = 0
offset_left = 768.0
offset_top = 332.0
offset_right = 1077.0
offset_bottom = 443.0
theme_override_font_sizes/font_size = 75
text = "zephyr"

[node name="start_pixelnoob" type="Button" parent="Test"]
layout_mode = 0
offset_left = 1116.0
offset_top = 332.0
offset_right = 1483.0
offset_bottom = 443.0
theme_override_font_sizes/font_size = 75
text = "pixelnoob"

[node name="TestExit" type="Button" parent="Test"]
layout_mode = 0
offset_left = 21.0
offset_top = 20.0
offset_right = 299.0
offset_bottom = 131.0
theme_override_font_sizes/font_size = 75
text = "Back"

[node name="Main" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="Sprite2D" parent="Main"]
position = Vector2(960, 544)
texture = ExtResource("2_2c62f")

[node name="Test" type="Button" parent="Main"]
visible = false
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 328.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 75
text = "Test"

[node name="Level1" type="Button" parent="Main"]
layout_mode = 0
offset_left = 1083.0
offset_top = 639.0
offset_right = 1575.0
offset_bottom = 832.0
theme_override_font_sizes/font_size = 75
theme_override_styles/hover = SubResource("StyleBoxTexture_d5x1h")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8mm7a")
theme_override_styles/normal = SubResource("StyleBoxTexture_gyfs4")

[node name="ImmovablePlayer" parent="Main" instance=ExtResource("4_8mm7a")]
position = Vector2(362, 524)
scale = Vector2(8, 8)

[node name="Cage" type="Sprite2D" parent="Main"]
position = Vector2(397, 540)
texture = ExtResource("5_8mm7a")

[connection signal="pressed" from="Test/start_jelly" to="." method="_on_start_jelly_pressed"]
[connection signal="pressed" from="Test/start_szejtan" to="." method="_on_start_szejtan_pressed"]
[connection signal="pressed" from="Test/start_noome" to="." method="_on_start_noome_pressed"]
[connection signal="pressed" from="Test/start_zephyr" to="." method="_on_start_zephyr_pressed"]
[connection signal="pressed" from="Test/start_pixelnoob" to="." method="_on_start_pixelnoob_pressed"]
[connection signal="pressed" from="Test/TestExit" to="." method="_on_test_exit_pressed"]
[connection signal="pressed" from="Main/Test" to="." method="_on_test_pressed"]
[connection signal="pressed" from="Main/Level1" to="." method="_on_level_1_pressed"]
